Feat: assets폴더 생성 및 leaf 이미지 추가

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="floating_mini_icons">
+        <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 10%; left: 10%;">
+    </div>
 </body>
 </html>
