Desgin: letter-p icon 추가

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="floating_mini_icons">
         <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 10%; left: 10%;">
+        <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 20%; left: 80%;">
     </div>
 </body>
 </html>
