--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
         <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
         <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
-        <img src="icon5.png" style="top: 80%; left: 60%;">
-        <img src=""  style="top: 60%; left: 80%;">
+        <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
+        <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
 
     </div>
 </body>
