Feat: center_elements 추가(메인 이미지 및 버튼 추가)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
         <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
         <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
+    </div>
 
+    <div class="center_elements">
+        <img src="assets/pukyong.png" alt="pukyong">
+        <button onclick="alert('Button Clicked!')">Click</button>
     </div>
 </body>
 </html>
