--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 첫 번째 페이지 -->
     <div class="floating_mini_icons">
         <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
         <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
@@ -14,10 +15,19 @@
         <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
         <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
     </div>
-
+    
     <div class="center_elements">
         <img src="assets/pukyong.png" alt="pukyong">
-        <button onclick="alert('Button Clicked!')">Click</button>
+        <button onclick="rotateGrid()">Click</button>
     </div>
+
+     <!-- 두 번째 페이지 -->
+     <div class="background-grid"></div>
+
+     <script>
+         function rotateGrid() {
+             document.querySelector('.background-grid').classList.add('rotate-left');
+         }
+     </script>
 </body>
 </html>
