Feat: 버튼 클릭 시, 아이콘, 이미지 사라지는 기능 추가

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
      <script>
          function rotateGrid() {
              document.querySelector('.background-grid').classList.add('rotate-left');
+             document.querySelector('.floating_mini_icons').style.display = 'none';
+             document.querySelector('.center_elements').style.display = 'none';
          }
      </script>
 </body>
