--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <!-- 두 번째 페이지 -->
+     <!-- 배경 그리드 -->
      <div class="background-grid"></div>
 
     <!-- 첫 번째 페이지 -->
@@ -23,13 +23,12 @@
         <img src="assets/pukyong.png" alt="pukyong">
         <button onclick="rotateGrid()">Click</button>
     </div>
-    
      <script>
          function rotateGrid() {
              document.querySelector('.background-grid').classList.add('rotate-left');
              document.querySelector('.floating_mini_icons').style.display = 'none';
              document.querySelector('.center_elements').style.display = 'none';
-         }
+            }
      </script>
 </body>
 </html>
