--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
         <img src="assets/pukyong.png" alt="pukyong">
         <button onclick="rotateGrid()">Click</button>
     </div>
-     <script>
-         function rotateGrid() {
-             document.querySelector('.background-grid').classList.add('rotate-left');
-             document.querySelector('.floating_mini_icons').style.display = 'none';
-             document.querySelector('.center_elements').style.display = 'none';
-            }
-     </script>
+     <script src="script.js"></script>
 </body>
 </html>
