--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
      <div class="background-grid"></div>
 
     <!-- 첫 번째 페이지 -->
-    <div class="floating_mini_icons">
-        <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
-        <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
-        <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
-        <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
-        <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
-    </div>
-    
-    <div class="center_elements">
-        <img src="assets/pukyong.png" alt="pukyong">
-        <button onclick="rotateGrid()">Click</button>
+    <!-- <div class="content"> -->
+        <div class="floating_mini_icons">
+            <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
+            <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
+            <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
+            <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
+            <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
+        </div>
+        
+        <div class="center_elements">
+            <img src="assets/pukyong.png" alt="pukyong" id="main-image">
+            <button onclick="rotateGrid()">Click</button>
+        <!-- </div> -->
     </div>
      <script src="script.js"></script>
 </body>
