Feat:  뿌공이 이미지 추가 및 마우스 클릭 이동 구현

--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
      <div class="background-grid"></div>
 
     <!-- 첫 번째 페이지 -->
-    <!-- <div class="content"> -->
-        <div class="floating_mini_icons">
-            <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
-            <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
-            <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
-            <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
-            <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
-        </div>
-        
-        <div class="center_elements">
-            <img src="assets/pukyong.png" alt="pukyong" id="main-image">
-            <button onclick="rotateGrid()">Click</button>
-        <!-- </div> -->
+    <div class="floating_mini_icons">
+        <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
+        <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
+        <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
+        <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
+        <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
     </div>
+    
+    <div class="center_elements">
+        <img src="assets/pukyong.png" alt="pukyong" id="main-image">
+        <button onclick="rotateAndMove()">Click</button>
+    </div>
+
+         <!-- 캐릭터 이미지-->
+    <img src="assets/character/bbugong.gif" alt="backyong" class="backyong" id="backyong">
+
      <script src="script.js"></script>
 </body>
 </html>
