Feat: 뿌공이 초기 위치 설정 및 이동 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <!-- 배경 그리드 -->
      <div class="background-grid"></div>
 
-    <!-- 첫 번째 페이지 -->
+    <!-- 첫 번째 페이지 - 공중에 떠 있는 아이콘들 -->
     <div class="floating_mini_icons">
         <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
         <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
@@ -19,12 +19,13 @@
         <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
     </div>
     
+    <!-- 중앙 이미지와 버튼 -->
     <div class="center_elements">
         <img src="assets/pukyong.png" alt="pukyong" id="main-image">
         <button onclick="rotateAndMove()">Click</button>
     </div>
 
-         <!-- 캐릭터 이미지-->
+    <!-- 캐릭터 이미지-->
     <img src="assets/character/bbugong.gif" alt="backyong" class="backyong" id="backyong">
 
      <script src="script.js"></script>
