Chore: 뿌공이 이미지 변수 이름 변경

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- 캐릭터 이미지-->
-    <img src="assets/character/bbugong.gif" alt="backyong" class="backyong" id="backyong">
+    <img src="assets/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
 
      <script src="script.js"></script>
 </body>
