Feat: 학교 건물1 디자인 및 추가 구현

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
      <!-- 배경 그리드 -->
-     <div class="background-grid"></div>
+    <div class="background-grid"></div>
+
+    <!-- 건물 이미지 -->
+    <div class="buildings">
+        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building1" style="top: 20%; left: 30%;">
+        <!-- <img src="path/to/building2.png" alt="Building 2" class="building" style="top: 40%; left: 50%;"> -->
+    </div>
 
     <!-- 첫 번째 페이지 - 공중에 떠 있는 아이콘들 -->
     <div class="floating_mini_icons">
@@ -27,6 +33,7 @@
 
     <!-- 캐릭터 이미지-->
     <img src="assets/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
+
 
      <script src="script.js"></script>
 </body>
