Feat: 건물 이미지 추가 및 타이밍 조건 추가

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- 건물 이미지 -->
     <div class="buildings">
         <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building1" style="top: 20%; left: 30%;">
+        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building2" style="top: 20%; left: 30%;">
+        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building3" style="top: 20%; left: 30%;">
         <!-- <img src="path/to/building2.png" alt="Building 2" class="building" style="top: 40%; left: 50%;"> -->
     </div>
 
