--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
     <!-- 건물 이미지 -->
     <div class="buildings">
-        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building1" style="top: 20%; left: 30%;">
-        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building2" style="top: 20%; left: 30%;">
-        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building3" style="top: 20%; left: 30%;">
-        <!-- <img src="path/to/building2.png" alt="Building 2" class="building" style="top: 40%; left: 50%;"> -->
+        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building1">
+        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building2">
+        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building3">
     </div>
 
     <!-- 첫 번째 페이지 - 공중에 떠 있는 아이콘들 -->
