Feat: 백경이 캐릭터 추가 및 크기 조정

--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 
     <!-- 건물 이미지 -->
     <div class="buildings">
-        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building1">
-        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building2">
-        <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building3">
+        <img src="assets/building_image/A16.png" alt="A16" class="building1">
+        <img src="assets/building_image/A27.png" alt="A27" class="building2">
+        <img src="assets/building_image/A23.png" alt="A23" class="building3">
+        <img src="assets/building_image/A22_grass.png" alt="A22_grass" class="building4">
+        <img src="assets/building_image/A22.png" alt="A22" class="building5">
+        <img src="assets/building_image/A21.png" alt="A21" class="building6">
+        <img src="assets/building_image/A15.png" alt="A15" class="building7">
+        <img src="assets/building_image/A13.png" alt="A13" class="building8">
+        <img src="assets/building_image/A12.png" alt="A12" class="building9">
+        <img src="assets/building_image/A11.png" alt="A11" class="building10">
+        <!-- <img src="assets/building_image/A16,A23,A27.png" alt="A16,A23,A27" class="building3"> -->
     </div>
 
     <!-- 첫 번째 페이지 - 공중에 떠 있는 아이콘들 -->
@@ -33,8 +41,8 @@
     </div>
 
     <!-- 캐릭터 이미지-->
+    <img src="assets/character/backyong.gif" alt="backyong" class="backyong" id="backyong">
     <img src="assets/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
-
 
      <script src="script.js"></script>
 </body>
