Feat: 오디오 버튼 추가

--- a/index.html
+++ b/index.html
@@ -12,45 +12,48 @@
     <!-- 배경 그리드 -->
     <div class="background-grid"></div>
 
+    <button id="toggleButton" onclick="toggleMusic()">🔇</button>
+    <audio id="audioContainer" src="assets/audio/never_been_better.mp3"></audio>
+
     <!-- 건물 이미지 -->
     <div class="buildings">
-        <img src="assets/building_image/A16.png" alt="A16" class="building1">
-        <img src="assets/building_image/A27.png" alt="A27" class="building2">
-        <img src="assets/building_image/A23.png" alt="A23" class="building3">
-        <img src="assets/building_image/A22_grass.png" alt="A22_grass" class="building4">
-        <img src="assets/building_image/A22.png" alt="A22" class="building5">
-        <img src="assets/building_image/A21.png" alt="A21" class="building6">
-        <img src="assets/building_image/A15.png" alt="A15" class="building7">
-        <img src="assets/building_image/A13.png" alt="A13" class="building8">
-        <img src="assets/building_image/A12.png" alt="A12" class="building9">
-        <img src="assets/building_image/A11.png" alt="A11" class="building10">
+        <img src="assets/images/building_image/A16.png" alt="A16" class="building1">
+        <img src="assets/images/building_image/A27.png" alt="A27" class="building2">
+        <img src="assets/images/building_image/A23.png" alt="A23" class="building3">
+        <img src="assets/images/building_image/A22_grass.png" alt="A22_grass" class="building4">
+        <img src="assets/images/building_image/A22.png" alt="A22" class="building5">
+        <img src="assets/images/building_image/A21.png" alt="A21" class="building6">
+        <img src="assets/images/building_image/A15.png" alt="A15" class="building7">
+        <img src="assets/images/building_image/A13.png" alt="A13" class="building8">
+        <img src="assets/images/building_image/A12.png" alt="A12" class="building9">
+        <img src="assets/images/building_image/A11.png" alt="A11" class="building10">
     </div>
 
     <!-- 첫 번째 페이지 - 공중에 떠 있는 아이콘들 -->
     <div class="floating_mini_icons">
-        <img src="assets/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
-        <img src="assets/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
-        <img src="assets/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
-        <img src="assets/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
-        <img src="assets/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
+        <img src="assets/images/floating_mini_icons/leaf.png" alt="leaf" style="top: 20%; left: 10%;">
+        <img src="assets/images/floating_mini_icons/megaphone.png" alt="megaphone" style="top: 15%; left: 80%;">
+        <img src="assets/images/floating_mini_icons/letter-p.png" alt="letter-p" style="top: 70%; left: 20%;">
+        <img src="assets/images/floating_mini_icons/water-splash.png" alt="water-splash" style="top: 80%; left: 60%;">
+        <img src="assets/images/floating_mini_icons/mortarboard.png" alt="mortarboard" style="top: 60%; left: 80%;">
     </div>
     
     <!-- 중앙 이미지와 버튼 -->
     <div class="center_elements">
-        <img src="assets/pukyong.png" alt="pukyong" id="main-image">
+        <img src="assets/images/pukyong.png" alt="pukyong" id="main-image">
         <button onclick="rotateAndMove()">Click</button>
     </div>
 
     <!-- 캐릭터 이미지-->
     <div id="backyong-container">
-        <img src="assets/character/backyong.gif" alt="backyong" class="backyong" id="backyong">
+        <img src="assets/images/character/backyong.gif" alt="backyong" class="backyong" id="backyong">
         <div id="backyong-speech-bubble" class="speech-bubble">
             <p> 안녕! 나는 백경이야~ </p>
         </div>
     </div>
 
     <div id="bbugong-container">
-        <img src="assets/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
+        <img src="assets/images/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
         <div id="bbugong-speech-bubble" class="speech-bubble">
             <p> 안녕! 나는 뿌공이야~ </p>
         </div>
