Feat: img 중복으로 인한 변수 명 변경

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <div class="center_elements">
         <img src="assets/images/pukyong.png" alt="pukyong" id="main-image">
         <button onclick="rotateAndMove()">Click</button>
+        <p>아래의 두 캐릭터 중 원하는 캐릭터를 선택해줘!</p>
+        <!-- <img src="assets/images/angle-down.png" alt="angle-down" id="angle-down"> -->
     </div>
 
     <!-- 캐릭터 이미지-->
