Feat: 색상 변경에서 하트 띄우기로 변경

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <!-- 캐릭터 이미지-->
     <div id="backyong-container">
         <img src="assets/images/character/backyong.gif" alt="backyong" class="backyong" id="backyong">
+        <img src="assets/images/heart.png" alt="heart" id="backyong-heart">
         <div id="backyong-speech-bubble" class="speech-bubble">
             <p> 안녕! 나는 백경이야~ </p>
         </div>
@@ -58,6 +59,7 @@
 
     <div id="bbugong-container">
         <img src="assets/images/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
+        <img src="assets/images/heart.png" alt="heart" id="bbugong-heart">
         <div id="bbugong-speech-bubble" class="speech-bubble">
             <p> 안녕! 나는 뿌공이야~ </p>
         </div>
