--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div id="bbugong-container">
-        <img src="assets/images/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
+        <img onclick="togglePopup()" src="assets/images/character/bbugong.gif" alt="bbugong" class="bbugong" id="bbugong">
         <img src="assets/images/heart.png" alt="heart" id="bbugong-heart">
         <div id="bbugong-speech-bubble" class="speech-bubble">
             <p> 안녕! 나는 뿌공이야~ </p>
@@ -66,17 +66,30 @@
     </div>
 
     <!-- 캐릭터 선택 확인 팝업 창 -->
-    <div class="character-choose-popup" id="character-choose-popup">
+    <div class="backyong-popup" id="backyong-popup">
         <div class="popup-content">
             <div id="popup-backyong-speech-bubble" class="popup-backyong-speech-bubble">
                 <p> 안녕! 나는 백경이야~ </p>
             </div>
-            <img src="assets/images/character/backyong.gif" alt="popup-backyong" class="popup-backyong-img">
+            <img src="assets/images/character/backyong.gif" alt="popup-backyong-img" class="popup-backyong-img">
             <div class="popup-backyong-buttons"></div>
-            <button onclick="closePopup()" class="popup-backyong-check">백경이로 할래요!</button>
-            <button onclick="closePopup()" class="popup-backyong-close">좀 더 고민해볼래요..</button>
+            <button onclick="closeBackyongPopup()" class="popup-backyong-check">백경이로 할래요!</button>
+            <button onclick="closeBackyongPopup()" class="popup-backyong-close">좀 더 고민해볼래요..</button>
         </div>
     </div>
+    <div class="bbugong-popup" id="bbugong-popup">
+        <div class="popup-content">
+            <div id="popup-bbugong-speech-bubble" class="popup-bbugong-speech-bubble">
+                <p> 안녕! 나는 뿌공이야~ </p>
+            </div>
+            <img src="assets/images/character/bbugong.gif" alt="popup-bbugong-img" class="popup-bbugong-img">
+            <div class="popup-bbugong-buttons"></div>
+            <button onclick="closeBbugongPopup()" class="popup-bbugong-check">뿌공이로 할래요!</button>
+            <button onclick="closeBbugongPopup()" class="popup-bbugong-close">좀 더 고민해볼래요..</button>
+        </div>
+    </div>
+
+    <div id="modal-overlay"></div>
 
      <script src="script.js"></script>
 </body>
