--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <img src="assets/images/character/backyong.gif" alt="popup-backyong-img" class="popup-backyong-img">
             <div class="popup-backyong-buttons"></div>
-            <button onclick="closeBackyongPopup()" class="popup-backyong-check">백경이로 할래요!</button>
+            <button onclick="toggleBackyong()" class="popup-backyong-check">백경이로 할래요!</button>
             <button onclick="closeBackyongPopup()" class="popup-backyong-close">좀 더 고민해볼래요..</button>
         </div>
     </div>
@@ -84,7 +84,7 @@
             </div>
             <img src="assets/images/character/bbugong.gif" alt="popup-bbugong-img" class="popup-bbugong-img">
             <div class="popup-bbugong-buttons"></div>
-            <button onclick="closeBbugongPopup()" class="popup-bbugong-check">뿌공이로 할래요!</button>
+            <button onclick="toggleBbugong()" class="popup-bbugong-check">뿌공이로 할래요!</button>
             <button onclick="closeBbugongPopup()" class="popup-bbugong-close">좀 더 고민해볼래요..</button>
         </div>
     </div>
