Feat: 뿌공이 선택 시, 뿌공이 중으로 이동 구현 및 리셋 버튼 생성

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <!-- 배경 그리드 -->
     <div class="background-grid"></div>
 
+    <!-- 리셋 버튼 -->
+    <button id="reset-button">Reset</button>
+    
     <!-- 배경 음악 -->
-    <button id="toggleButton" onclick="toggleMusic()">🔇</button>
+    <button id="audio-toggleButton" onclick="toggleMusic()">🔇</button>
     <audio id="audioContainer" src="assets/audio/never_been_better.mp3"></audio>
 
     <!-- 건물 이미지 -->
