Feat : reset버튼 오른쪽 상단 고정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="background-grid"></div>
 
     <!-- 리셋 버튼 -->
-    <button id="reset-button">Reset</button>
+    <button id="reset-button" onclick="clickReset()">Reset</button>
     
     <!-- 배경 음악 -->
     <button id="audio-toggleButton" onclick="toggleMusic()">🔇</button>
