Feat: 백경이, 뿌공이 시작 애니메이션 및 하트, 말풍선, 위치 수정

--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
     <img src="assets/images/character/bbugong.gif" id="bbugong"></div>
 
     <script>
-        const bbugong = document.getElementById('bbugong');
+        const bbugong = document.getElementById('.bbugong');
 
         function animateBbugong(startX, startY, endX, endY) {
             let progress = 0;
