Feat: 파비콘 추가 및 빌딩 제거

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="icon" href="/assets/images/favicon/leaf.ico">
 </head>
 <body>
     <!-- 배경 그리드 -->
@@ -63,7 +64,7 @@
             <button data-modal="A21" class="sidebar-button">A21</button>
             <button data-modal="A22" class="sidebar-button">A22</button>
             <button data-modal="A23" class="sidebar-button">A23</button>
-            <button data-modal="A26" class="sidebar-button">A26</button>
+            <!-- <button data-modal="A26" class="sidebar-button">A26</button> -->
             <!-- <button data-modal="A27" class="sidebar-button">A27</button> -->
             <button data-modal="B11" class="sidebar-button">B11</button>
             <button data-modal="B12" class="sidebar-button">B12</button>
